--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,9 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../images/background1.jpg') no-repeat center center fixed;
+    background: url('../images/background4.jpg') no-repeat center center fixed;
     background-size: cover;
-    filter: blur(3px) grayscale(30%); /* blur */
+    filter:  grayscale(30%); /* blur */
     z-index: -1; /* postavi za content */
 }
 
@@ -176,7 +176,7 @@ body::before {
     border-radius: 20px;
     overflow: hidden;
     transition: transform 0.15s, filter 0.15s;
-    filter: grayscale(50%) brightness(30%); /* temni filter */
+    filter: grayscale(50%) brightness(30%) blur(1px); /* temni filter */
 }
 
 .image-gallery img:hover, .image-gallery img.scaled {
