--- a/css/styles-login.css
+++ b/css/styles-login.css
@@ -142,8 +142,8 @@ body::before {
     font-size: 30px;
     margin-bottom: 40px;
     font-family: 'Times New Roman', serif;
-    border-left: solid 5px #4A443F;
-    border-right: solid 5px #4A443F;
+    border-left: solid 5px rgb(107, 104, 101);
+    border-right: solid 5px rgb(107, 104, 101);
     border-radius: 25px;
     padding: 10px;
     padding-right: 50px;
@@ -240,7 +240,7 @@ body::before {
 /* Style for the back arrow inside the menu */
 .back-arrow {
     position: absolute;
-    top: 25%;
+    top: 20%;
     left: 26%;
     font-size: 50px;
     color:#ffffff5d;
@@ -253,4 +253,15 @@ body::before {
 
 .swal2-popup.my-sweetalert {
     border: 4px dashed #4A443F !important;
+}
+
+.credits {
+    position: absolute;
+    top: 50%;
+    right: 8%;
+    transform: translateY(-50%);
+    color: rgb(73, 73, 72);
+    font-size: 15px;
+    font-family: 'Times New Roman', serif;
+    cursor: pointer;
 }
